added search and filter to estate_property

--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -1,5 +1,86 @@
 <?xml version="1.0"?>
 <odoo>
+    <record id="estate_property_view_form" model="ir.ui.view">
+        <field name="name">estate.property.form</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <form string="My new house">
+                <sheet>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="name" placeholder="" />
+                        </h1>
+                    </div>
+                    <group>
+                        <group>
+                            <field name="postcode" />
+                            <field name="availability_date" />
+                        </group>
+                        <group>
+                            <field name="expected_price" />
+                            <field name="selling_price" />
+                        </group>
+                    </group>
+                    <notebook>
+                        <page string="Description">
+                            <group>
+                                <field name="description" />
+                                <field name="bedrooms" />
+                                <field name="living_area" />
+                                <field name="facades" />
+                                <field name="garage" />
+                                <field name="garden" />
+                                <field name="garden_area" />
+                                <field name="garden_orientation" />
+                            </group>
+                        </page>
+                    </notebook>
+
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="view_estate_property_search" model="ir.ui.view">
+        <field name="name">estate.property.search</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <search string="Estate Property">
+                <field name="name" string="Title" />
+                <field name="postcode" string="Postcode" />
+                <field name="expected_price" string="Expected Price" />
+                <field name="bedrooms" string="Bedrooms" />
+                <field name="living_area" string="Living Area" />
+                <field name="facades" string="Facades" />
+
+                <separator />
+                <filter string="Available" name="availability_date"
+                    domain="[('availability_date', '&gt;', context_today().strftime('%Y-%m-%d'))]" />
+
+                <!-- <group expand="1" string="Group By">
+                    <filter string="Provider" name="provider"
+                        context="{'group_by':'delivery_type', 'residual_visible':True}" />
+                </group> -->
+            </search>
+        </field>
+    </record>
+
+    <record id="estate_property_view_tree" model="ir.ui.view">
+        <field name="name">estate.property.tree</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <tree string="list">
+                <field string="Title" name="name" />
+                <field name="postcode" />
+                <field name="bedrooms" />
+                <field string='Living Area (sqm)' name="living_area" />
+                <field string='Expected Price' name="expected_price" />
+                <field string='Selling Price Price' name="selling_price" />
+                <field string='Availability From' name="availability_date" />
+            </tree>
+        </field>
+    </record>
+
     <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Estate property</field>
         <field name="res_model">estate.property</field>
