--- a/estate/views/estate_menus.xml
+++ b/estate/views/estate_menus.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0"?>
 <odoo>
     <menuitem id="estate_property_menu_root" name="Real Estate">
-        <menuitem id="estate_property_first_level_menu" name="First Level">
-            <menuitem id="estate_property_menu_action" action="estate_property_action"/>
+        <menuitem id="estate_property_advertisement_menu" name="Advertisement">
+            <menuitem id="estate_property_menu_action" action="estate_property_action" />
+        </menuitem>
+        <menuitem id="estate_property_settings_menu" name="Settings">
+            <menuitem id="estate_property_type_menu_action" action="estate_property_type_action" />
         </menuitem>
     </menuitem>
 </odoo>
