--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -34,6 +34,12 @@
                                 <field name="garden_orientation" />
                             </group>
                         </page>
+                        <page string="Other Info">
+                            <group>
+                                <field name="user_id" />
+                                <field name="partner_id" />
+                            </group>
+                        </page>
                     </notebook>
 
                 </sheet>
