--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -11,6 +11,7 @@
                             <field name="name" placeholder="" />
                         </h1>
                     </div>
+                    <field name="tag_ids" widget="many2many_tags" />
                     <group>
                         <group>
                             <field name="postcode" />
