--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -35,6 +35,15 @@
                                 <field name="garden_orientation" />
                             </group>
                         </page>
+                        <page string="Offers">
+                            <field name="offer_ids" mode="tree">
+                                <tree>
+                                    <field name="price"/>
+                                    <field name="partner_id"/>
+                                    <field name="status"/>
+                                </tree>
+                            </field>
+                        </page>
                         <page string="Other Info">
                             <group>
                                 <field name="user_id" />
