--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -33,14 +33,16 @@
                                 <field name="garden" />
                                 <field name="garden_area" />
                                 <field name="garden_orientation" />
+                                <field name="total_area" />
                             </group>
                         </page>
                         <page string="Offers">
                             <field name="offer_ids" mode="tree">
                                 <tree>
-                                    <field name="price"/>
-                                    <field name="partner_id"/>
-                                    <field name="status"/>
+                                    <field name="price" />
+                                    <field name="partner_id" />
+                                    <field name="validity" />
+                                    <field name="date_deadline" />
                                 </tree>
                             </field>
                         </page>
