--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -5,6 +5,11 @@
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <form string="My new house">
+                <header>
+                    <button name="sold" type="object" string="Sold" class="oe_highlight" />
+                    <button name="cancel" type="object" string="Calncel" />
+                </header>
+
                 <sheet>
                     <div class="oe_title">
                         <h1>
@@ -14,6 +19,7 @@
                     <field name="tag_ids" widget="many2many_tags" />
                     <group>
                         <group>
+                            <field name="state" />
                             <field name="postcode" />
                             <field name="availability_date" />
                         </group>
@@ -43,6 +49,12 @@
                                     <field name="partner_id" />
                                     <field name="validity" />
                                     <field name="date_deadline" />
+                                    <button name="accept" string="Accept" type="object"
+                                        icon="fa-check" />
+                                    <button name="refuse" string="Refuse" type="object"
+                                        icon="fa-close" />
+                                    <field name="status" />
+
                                 </tree>
                             </field>
                         </page>
